[package]
name = "ldap-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
byteorder = "1"
hmac = "0.12.1"
md-5 = "0.10.1"
tokio = { version = "1.21.2", features = ["full"] }
